syntax = "proto3";

option go_package = "github.com/multycloud/multy/api/proto/resources";
option java_multiple_files = true;
option java_package = "dev.multy.api.resources";
option java_outer_classname = "ResourcesProto";

import "api/proto/common/common.proto";

package dev.multy.resources;

message CreateDatabaseRequest {
  DatabaseArgs resource = 1;
}

message ReadDatabaseRequest {
  string resource_id = 1;
}

message UpdateDatabaseRequest {
  string resource_id = 1;
  DatabaseArgs resource = 2;
}

message DeleteDatabaseRequest {
  string resource_id = 1;
}

enum DatabaseEngine {
  UNKNOWN_ENGINE = 0;
  MYSQL = 1;
}

message DatabaseArgs {
  common.ResourceCommonArgs common_parameters = 1;
  string name = 2;
  DatabaseEngine engine = 3;
  string engine_version = 4;
  int64 storage_gb = 5;
  common.DatabaseSize.Enum size = 6;
  string username = 7;
  string password = 8;
  repeated string subnet_ids = 9;
}

message DatabaseResource {
  common.CommonResourceParameters common_parameters = 1;
  string name = 2;
  DatabaseEngine engine = 3;
  string engine_version = 4;
  int64 storage_gb = 5;
  common.DatabaseSize.Enum size = 6;
  string username = 7;
  string password = 8;
  repeated string subnet_ids = 9;

  //outputs
  string host = 10;
}
