syntax = "proto3";

option go_package = "github.com/multycloud/multy/api/proto/resources";
option java_multiple_files = true;
option java_package = "dev.multy.api.resources";
option java_outer_classname = "ResourcesProto";

import "api/proto/common/common.proto";

package dev.multy.resources;

message CreateVaultAccessPolicyRequest {
  repeated CloudSpecificVaultAccessPolicyArgs resources = 1;
}

message ReadVaultAccessPolicyRequest {
  string resource_id = 1;
}

message UpdateVaultAccessPolicyRequest {
  string resource_id = 1;
  repeated CloudSpecificVaultAccessPolicyArgs resources = 2;
}

message DeleteVaultAccessPolicyRequest {
  string resource_id = 1;
}

message VaultAccess {
  enum Enum {
    UNKNOWN = 0;
    READ = 1;
    WRITE = 2;
    OWNER = 3;
  }
}

message CloudSpecificVaultAccessPolicyArgs {
  common.CloudSpecificResourceCommonArgs common_parameters = 1;
  string vault_id = 2;
  string identity = 3;
  VaultAccess access = 4;
}

message CloudSpecificVaultAccessPolicyResource {
  common.CloudSpecificCommonResourceParameters common_parameters = 1;
  string vault_id = 2;
  string identity = 3;
  VaultAccess access = 4;
}

message VaultAccessPolicyResource {
  common.CommonResourceParameters common_parameters = 1;
  repeated CloudSpecificVaultAccessPolicyResource resources = 2;
}
